# light-client-example

./: README.md
contract/: Cargo.toml  Makefile
contract/src/: lib.rs
parameter_generator/: Cargo.toml
parameter_generator/src/: main.rs
